ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1/input.ts.stderr
error[1005]: Expected ')'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1/input.ts:4:3
  |
4 |   }
  |   ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1/input.ts:4:3
  |
4 |   }
  |   ^

